# FnQ3

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  CREDITS.md  Makefile  README.md  meson.build  meson_options.txt
.github/: release-notes-instructions.md
.github/scripts/: issue_triage.py
.github/workflows/: glx-verification.yml  nightly.yml  release.yml  vulkan-verification.yml
.install/: README.html
code/audio/: AudioOcclusion.h  AudioSystem.cpp  AudioSystemBackend.inl  AudioSystemOpenAL.inl  AudioSystemShared.inl  AudioSystemWorld.inl  AudioZoneFormat.h  AudioZoneRuntime.h
code/botlib/: be_ai_chat.cpp  be_interface.cpp  botlib.h  l_precomp.cpp
code/client/: cl_avi.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_curl.cpp  cl_hud.cpp  cl_input.cpp  cl_jpeg.cpp  cl_keys.cpp  cl_main.c  cl_main.cpp  cl_net_chan.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  client_cpp.h  snd_adpcm.cpp  snd_codec.cpp  snd_codec.h  snd_codec_ogg.cpp  snd_codec_wav.cpp  snd_dma.cpp  snd_local.h  snd_main.c  snd_main.cpp  snd_mem.cpp  snd_mix.cpp  snd_wavelet.cpp
code/client/audio/: snd_main.cpp
code/client/audio/codecs/: snd_codec.cpp  snd_codec_ogg.cpp  snd_codec_wav.cpp
code/client/audio/legacy/: snd_dma.cpp  snd_mem.cpp  snd_mix.cpp
code/client/audio/openal/: AudioSystem.cpp  AudioSystemBackend.inl  (+4 more)
code/qcommon/: bsp_v43.h  common.c  files.c  json.h  q_shared.h
code/renderer/: qgl.h  tr_animation.c  tr_arb.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_flares.c  tr_glx_compat.h  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_mesh.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_surface.c  tr_vbo.c  tr_world.c
code/renderer2/: tr_backend.c  tr_init.c  tr_local.h  tr_shade.c  tr_shader.c
code/renderer2/glsl/: generic_fp.glsl
code/renderercommon/: tr_glx_api.h  tr_glx_bridge.h  tr_glx_public.h  tr_portal_plan.h  tr_public.h  tr_types.h
code/rendererglx/: glx_caps.cpp  glx_caps.h  glx_caps_logic.h  glx_color_math.h  glx_debug.cpp  glx_debug.h  glx_executor.cpp  glx_executor.h  glx_local.h  glx_material.cpp  glx_material.h  glx_material_key.h  glx_module.cpp  glx_module.h  glx_post_output_reference.h  glx_post_shader.cpp  glx_post_shader.h  glx_post_shader_plan.h  glx_post_shader_source.h  glx_postprocess.cpp  glx_postprocess.h  glx_profiler.cpp  glx_profiler.h  glx_render_ir.h  glx_static_world.cpp  glx_static_world.h  glx_static_world_logic.h  glx_stream.cpp  glx_stream.h  glx_stream_logic.h  glx_types.h
code/renderervk/: tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_mesh.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_surface.c  tr_world.c  vk.c  vk.h
code/renderervk/shaders/: csm_shadow.frag  gamma.frag  gen_frag.tmpl  light_frag.tmpl
code/sdl/: sdl_gamma.cpp  sdl_glimp.c  sdl_glimp.cpp  sdl_input.cpp  sdl_raii.h  sdl_snd.cpp
code/server/: server.h  sv_ccmds.cpp  sv_client.cpp  sv_game.cpp  sv_init.c  sv_main.c  sv_snapshot.c
code/tools/audiozones/: README.md  audiozonesc.cpp
code/unix/: linux_glimp.c  linux_glimp.cpp  linux_qgl.cpp  linux_qvk.cpp  linux_signals.cpp  linux_snd.cpp  unix_glw.h  unix_main.cpp  unix_raii.h  unix_shared.cpp
code/win32/: win_gamma.cpp  win_glimp.c  win_glimp.cpp  win_input.cpp  win_local.h  win_main.cpp  win_qvk.cpp  win_raii.h  win_shared.cpp  win_snd.cpp  win_syscon.cpp  win_wndproc.cpp
code/win32/msvc2005/: fnquake3-ded.vcproj  fnquake3.vcproj
code/win32/msvc2017/: fnquake3-ded.vcxproj  fnquake3-ded.vcxproj.filters  fnquake3.sln  fnquake3.vcxproj  fnquake3.vcxproj.filters  rendererglx.vcxproj  rendererglx.vcxproj.filters
docs/: ASPECT_CORRECTION.md  AUDIO.md  DISPLAY.md  GLX.md  SCREENSHOTS.md  VISUALS.md  fnquake3-changes.txt  fnquake3.htm  fnquake3.md
docs-dev/plans/: 2026-06-03-glx-dlight-plan.md  2026-06-03-vk-shadowmapping.md  2026-06-15-shadowmapping.md
docs/fnquake3/: AUDIO_ENGINE.md  CHANGELOG.md  DLIGHT_SHADOWMAP_ROADMAP.md  GLX_COLORSPACE_AUDIT.md  GLX_FEATURE_MATRIX.md  GLX_FINAL_CONTRACT.md  GLX_LEGACY_COUPLING.md  GLX_PROMOTION.md  GLX_PROOF_CORPUS.md  GLX_RC_GATES.md  GLX_RENDERER.md  GLX_ROLLBACK_PACKAGE.md  GLX_TEXTURE_CLASSIFICATION_MANIFEST.json  GLX_VISUAL_DOSSIER.md  ISSUE_TRIAGE.md  TECHNICAL.md  VK_RC_GATES.md
docs/plans/: audio-review(2)-8-5-26.md  audio-review-8-5-26.md  glx-7-5-26.md  glx-review-10-5-26.md  glx-review-8-5-26.md  glx-review-9-5-26.md  hdr-review-2026-05-11.md  hdr-review-2026-05-12.md  modern-audio-hrtf-7-5-26.md  vk-review-8-5-26.md
docs/templates/: README.md.in  install-readme.html.in
pkg/baseq3/sound/: fnq3-weapon-sounds.sndshd
pkg/missionpack/sound/: fnq3-weapon-sounds.sndshd
scripts/: audio_zone_sweep.py  changelog.py  check_elf_glibc.py  dlight_shadow_release_gate.py  dlight_shadow_test.py  fnq3_meta.py  generate_docs.py  generate_standard_audio_zones.py  glx_promotion.py  glx_runtime_sweep.py  manual_release.py  nightly.py  release.py  root_archive.py  stringify_shader.py  verify_release_layout.py  version.py  vk_runtime_sweep.py
subprojects/: openal-soft.wrap
subprojects/packagefiles/openal-soft/: meson.build
tests/: changelog_tests.py  check_elf_glibc_tests.py  csm_plan_source_tests.py  csm_shadow_cache_source_tests.py  dlight_shadow_bias_tests.py  dlight_shadow_release_gate_tests.py  generate_docs_tests.py  release_packaging_tests.py  shadow_correctness_source_tests.py  shadow_manager_source_tests.py  surfacelight_validation_docs_tests.py  version_metadata_tests.py
tests/audio/: README.md  audio_zone_material_map_tests.py  audio_zone_standard_generation_tests.py  audio_zone_sweep_tests.py  audiozone_runtime_tests.cpp  occlusion_policy_tests.cpp  openal_loopback_tests.cpp  recovery_policy_tests.cpp  weapon_sound_shader_tests.py
tests/github/: issue_triage_tests.py
tests/glx/: README.md  glx_header_boundary_tests.py  glx_logic_tests.cpp  glx_runtime_sweep_tests.py  glx_spot_shadow_source_tests.py
tests/vulkan/: README.md  vk_runtime_sweep_tests.py
version/: fnq3_version.h
(+4 files in other folders)
